<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/rlToopView"
        layout="@layout/layout_top_view" />

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_below="@+id/rlToopView"
        android:paddingStart="@dimen/_16sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp">


        <TextView
            android:id="@+id/title"
            style="@style/MediumReadingFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="More Apps"
            android:textColor="@color/white"/>



        <!--This will share app link-->
        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_baseline_home_24"
            app:tint="@color/white" />

    </RelativeLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/ddtitle"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToopView"
        android:background="@color/colorPrimary"
        android:gravity="start"
        android:padding="@dimen/_4sdp"
        android:text="More Apps"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToolbar"
        android:layout_margin="@dimen/_8sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_8sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAppIcon1"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/st_pauls_icon"
                app:shapeAppearanceOverlay="@style/RoundImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivAppIcon1"
                android:orientation="vertical"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="St Paul's"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Website"
                    android:textColor="@color/textGrey" />

                <TextView
                    android:id="@+id/tvApp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here_to_open"
                    android:textColor="@color/blue" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv1"
        android:layout_margin="@dimen/_8sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_8sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/app_icon_2"
                app:shapeAppearanceOverlay="@style/RoundImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivAppIcon"
                android:orientation="vertical"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Community Bible"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_app"
                    android:textColor="@color/textGrey" />

                <TextView
                    android:id="@+id/tvApp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here_to_download"
                    android:textColor="@color/blue" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>